--- a/epub_to_pdf/Cargo.toml
+++ b/epub_to_pdf/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lib_pdf = { path = "../lib_pdf" }
+lib_stream_pdf = { path = "../lib_stream_pdf" }
